<resources>
    <!-- App General -->
    <string name="app_name" translatable="false">Despensa365</string>
    <string name="welcome">Bienvenido,</string>
    <string name="next">Continuar</string>
    <string name="back">Atrás</string>

    <!-- Login Screen -->
    <string name="login">Iniciar sesión</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="loginTitle">Inicio de sesión</string>
    <string name="mailTitle">Correo electrónico:</string>
    <string name="pwdTitle">Contraseña:</string>
    <string name="mailHint">Correo electrónico</string>

    <!-- Register Screen -->
    <string name="register">Registrarse</string>
    <string name="registerTitle">Página de registro</string>
    <string name="nicknameTitle">Nombre de usuario:</string>
    <string name="nicknameHint">Nombre de usuario</string>
    <string name="pwdAgainTitle">Repite la contraseña:</string>

    <!-- Management -->
    <string name="manWeek">Gestionar semana</string>
    <string name="manRecipes">Gestionar recetas</string>
    <string name="manPantry">Gestionar despensa</string>
    <string name="manList">Gestionar lista de la compra</string>

    <!-- Misc -->
    <string name="imageDescription">imageLogo</string>
    <string name="recipeTitle">Receta</string>
    <string name="recipeDirectionsTitle">Instrucciones</string>
    <string name="recipeIngredientsTitle">Ingredientes</string>
    <string name="recipeCreate">Crear</string>
    <string name="weekManagementTitle">Gestion de la semana</string>

    <!-- Array de nombres de días de la semana completos -->
    <string-array name="days_of_week_full">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </string-array>

    <!-- Array de nombres de días de la semana abreviados -->
    <string-array name="days_of_week_short">
        <item>L</item>
        <item>M</item>
        <item>X</item>
        <item>J</item>
        <item>V</item>
        <item>S</item>
        <item>D</item>
    </string-array>

    <string-array name="spinner_ingredients">
        <item>Litros</item>
        <item>Gramos</item>
    </string-array>


    <string name="weekAddRecipe">Haz click en la receta que deseas añadir</string>
    <string name="hintRecipe">Nombre de la receta</string>
    <string name="recipeListTitle">Listado de recetas</string>
    <string name="pantryTitle">Despensa</string>
    <string name="pantryIngr">Ingredientes en vigor</string>
    <string name="pantryIngrExp">Ingredientes expirados</string>
    <string name="toExpired">Ver caducados</string>
    <string name="addToBuy">Añadir a la lista de la compra</string>
    <string name="cleanExpired">Limpiar caducados</string>
    <string name="searchIngredient">Nombre del ingrediente</string>
    <string name="listBuyTitle">Lista de compra</string>
    <string name="addNeededIngr">Añadir ingredientes necesarios</string>
    <string name="doneToBuy">Comprados</string>
    <string name="expDateTitleIngr">Fecha de caducidad:</string>
    <string name="titleWeightIngr">Cantidad:</string>
    <string name="titleNumIngr">Cantidad:</string>
    <string name="typeOfIngredient">Tipo de ingrediente:</string>
    <string name="searchBy">Buscar</string>
    <string name="hintToUseIngDialog">Toca el ingrediente que quieras añadir, si quieres añadir un ingrediente a la base de datos abre el menú de arriba a la derecha</string>
    <string name="hintToUseRecDialog">Toca receta que quieras añadir</string>
    <string name="titleDialogChooseIngr">Lista de ingredientes</string>
    <string name="howMuch">Cantidad</string>
    <string name="hintWhenBought">Si no has comprado algo, no lo rellenes</string>
    <string name="tvNameOfIngredient">Nombre del ingrediente:</string>
    <string name="createIngredient">Crear ingrediente</string>
    <string name="hintMainActivity">Debes iniciar sesión para acceder</string>
    <string name="save">Guardar</string>
    <string name="newIngredient">Creacion de nuevo ingrediente</string>
    <string name="notAllowEmpty">No se permiten campos vacíos</string>
    <string name="pwdRules">La contraseña debe tener entre 8 y 16 caracteres, con al menos una letra mayúscula, una letra minúscula y un símbolo.</string>
    <string name="notSamePasswords">Las contraseñas no coinciden</string>
    <string name="invalidEmail">El correo electrónico no es válido</string>
    <string name="emailAlrExists">El correo electrónico ya existe</string>

    <string name="auth_invalid_credentials">Correo electrónico o contraseña inválidos</string>
    <string name="auth_invalid_user">No se encontró ninguna cuenta con este correo electrónico</string>
    <string name="auth_general_error">La autenticación falló. Por favor, inténtelo de nuevo.</string>

    <string name="registerPantryTitle">Registrar Despensa</string>
    <string name="postalCodeTitle">Código Postal</string>
    <string name="postalCodeHint">Introduce el código postal</string>
    <string name="cityTitle">Ciudad</string>
    <string name="cityHint">Introduce la ciudad</string>
    <string name="streetTitle">Calle</string>
    <string name="streetHint">Introduce la calle</string>
    <string name="streetNumberTitle">Número de la Calle</string>
    <string name="streetNumberHint">Introduce el número de la calle</string>

    <string name="invalidDate">Fecha incorrecta. El formato debe ser dd-MM-yyyy.</string>
    <string name="mustFill">Campo obligatorio.</string>
    <string name="fillTitleToBuy">El Titulo no puede estar vacío</string>
    <string name="createdSuccessfullyPantry">Despensa creada satisfactoriamente</string>
    <string name="failToCreateToBuy">Fallo creando la lista de la compra</string>
    <string name="toBuyDialogTitle">Introduce el título de la lista de la compra</string>
    <string name="hintTitle">Título</string>
    <string name="invalidData">Has introducido valores no válidos</string>
    <string name="ingredientsUpdated">Ingredientes gastados correctamente</string>
    <string name="notEnoughIngredients">Necesitas más ingredientes</string>
    <string name="changeLanguage">Cambiar idioma</string>
    <string name="actionDoneRecipes">Marcar como completadas</string>
    <string name="recipeUpdate">Actualizar</string>
    <string name="emptyNameRecipe">El nombre de la receta no puede estar vacío</string>
    <string name="fillAll">Todos los campos son obligatorios.</string>
    <string name="toBuyNotExists">Debes crear una lista de la compra</string>
    <string name="toBuyLinesCreated">Añadido satisfactoriamente</string>
    <string name="failedAddIngredient">Error al añadir el ingrediente</string>
    <string name="needToAddNameAndType">Debes introducir un nombre y un tipo</string>
</resources>
